[package]
name = "pyext-statistics"
version = "0.1.0"
authors = ["Alex Zharichenko <azharichenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "statistics"
crate-type = ["dylib"]

[dependencies.cpython]
version = "0.1=6"
features = ["extension-module"]